[intern] Logging refactoring, classes uses a Logger object for their package. Minor formatting and PMD fixes.